use two versions of X Cloud Beta button to prevent modal showing on smaller viewports

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12995,8 +12995,17 @@ hr {
   letter-spacing: -0.2px;
 }
 
+#page-cloud .pageHeader__cta--desktop {
+  display: none;
+}
+
 @media (min-width: 1080px) {
-  #page-cloud .pageHeader__cta {
+  #page-cloud .pageHeader__cta--mobile {
+    display: none;
+  }
+
+  #page-cloud .pageHeader__cta--desktop {
+    display: block;
     margin-top: 88px;
   }
 }
